--- a/layout/main.html
+++ b/layout/main.html
@@ -3,10 +3,12 @@
     <head>
         <title>Тюнинг авто в Краснодаре</title>
         <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="theme.css">
         <script src="main.js"></script>
     </head>
     <body>
-        <div class="toolbar top-toolbar">
+        <div class="toolbar top-toolbar dark-section">
+            <img  class="logo" src=" resources/logo/logo.png">
             <span class="toolbar-menu-item">Тюнинг авто в краснодера</span>
             <span class="toolbar-menu-item">
                 <span>Пн-пт: с 9.00 до 20.00</span>
@@ -16,11 +18,13 @@
                 <span>8 (861) 206-79-17</span>
                 <span>8 (861) 206-93-18</span>
             </span>
-            <button class="top-toolbar-button">Обратный звонок</button>
-            <button class="top-toolbar-button">Написать в WhatsApp</button>
-            <button class="top-toolbar-button">Написать в Telegram</button>
+            <div>
+                <button class="top-toolbar-button">Обратный звонок</button>
+                <button class="top-toolbar-button">Написать в WhatsApp</button>
+                <button class="top-toolbar-button">Написать в Telegram</button>
+            </div>
         </div>
-        <div class="toolbar bottom-toolbar">
+        <div class="toolbar bottom-toolbar dark-section">
             <span class="toolbar-menu-item">УСЛУГИ</span>
             <span class="toolbar-menu-item">НАШИ РАБОТЫ</span>
             <span class="toolbar-menu-item">О КОМПАНИИ</span>
@@ -30,37 +34,194 @@
             <span class="toolbar-menu-item">ВАКАНСИИ</span>
             <input placeholder="Поиск...">
         </div>
-        <div>
-            <div class="preview">
-                <h1>Оклейка авто виниловой пленкой в Краснодаре</h1>
-                <span>Скидки до 20% до 30 января!</span>
-                <button>РАССЧИТАТЬ ЦЕНУ</button>
+        <div class="preview dark-section">
+            <div class="preview-title">
+                <h1>Оклейка авто<br>виниловой пленкой<br>в Краснодаре</h1>
+                <h4>Скидки до 20% до 30 января!</h4>
+                <button type="button">РАССЧИТАТЬ ЦЕНУ</button>
             </div>
         </div>
-        <div class="projects">
-            <span>Наши проекты</span>
+        <div class="projects light-section">
+            <h1>Наши проекты</h1>
         </div>
-        <div class="advantages">
-            <span>Преимущества</span>
+        <div class="advantages dark-section">
+            <h1 class="section-header">Преимущества</h1>
             <div class="advantages-grid">
                 <div>
-                    <span>Индивидуальный дизайн</span>
+                    <div class="advantages-background">
+                        <img src="resources/logo/advantages_1.png">
+                    </div>
+                    <h3>Индивидуальный дизайн</h3>
                 </div>
                 <div>
-                    <span>Индивидуальный дизайн</span>
+                    <div class="advantages-background">
+                        <img src="resources/logo/advantages_2.png">
+                    </div>
+                    <h3>Высококачественные материалы</h3>
                 </div>
                 <div>
-                    <span>Индивидуальный дизайн</span>
+                    <div class="advantages-background">
+                        <img src="resources/logo/advantages_3.png">
+                    </div>
+                    <h3>Гарантия на материал 3-5 лет</h3>
                 </div>
                 <div>
-                    <span>Индивидуальный дизайн</span>
+                    <div class="advantages-background">
+                        <img src="resources/logo/advantages_4.png">
+                    </div>
+                    <h3>Разновидности пленок</h3>
                 </div>
                 <div>
-                    <span>Индивидуальный дизайн</span>
+                    <div class="advantages-background">
+                        <img src="resources/logo/advantages_5.png">
+                    </div>
+                    <h3>Выполнено более 380 проектов</h3>
                 </div>
                 <div>
-                    <span>Индивидуальный дизайн</span>
+                    <div class="advantages-background">
+                        <img src="resources/logo/advantages_6.png">
+                    </div>
+                    <h3>Гарантия работы 1 год</h3>
                 </div>
+            </div>
+        </div>
+        <div class="reviews light-section">
+            <h1>Отзывы наших клиентов</h1>
+        </div>
+        <div class="request dark-section">
+            <div>
+                <h1>Узнайте точную цену!</h1>
+                <span>Закажите обратный звонок и мы ответим на ваши вопросы</span>    
+            </div>
+            <div class="form">
+                <input type="text">
+                <input type="tel">
+                <input type="checkbox">
+                <button>Оставить заявку</button>
+            </div>
+        </div>
+        <div class="reasons light-section">
+            <h1>4 причины оклеить авто пленкой</h1>
+            <div>
+                <div class="reason-panel">
+                    <!-- <span>1</span> -->
+                    <span>Кто-то хочет выделиться, разукрасить свой автомобиль</span>
+                    <img src="resources/img/reasons_1.png">
+                </div>
+                <div class="reason-panel">
+                    <!-- <span>2</span> -->
+                    <span>Надоел старый цвет</span>
+                    <img src="resources/img/reasons_2.png">
+                </div>
+                <div class="reason-panel">
+                    <!-- <span>3</span> -->
+                    <span>Кто-то хочет частичнуую оклейку</span>
+                    <img src="resources/img/reasons_3.png">
+                </div>
+                <div class="reason-panel">
+                    <!-- <span>4</span> -->
+                    <span>Как алтернатива покраске</span>
+                    <img src="resources/img/reasons_4.png">
+                </div>
+            </div>
+        </div>
+        <div>
+
+        </div>
+        <div class="types light-section">
+            <h1>Разновидности виниловых покрытий</h1>
+            <div>
+                <div class="type">
+                    <img src="resources/img/types_1.png">
+                    <span>ГЛЯНЦЕВЫЙ</span>
+                </div>
+                <div class="type">
+                    <img src="resources/img/types_2.png">
+                    <span>МАТОВЫЙ</span>
+                </div>
+                <div class="type">
+                    <img src="resources/img/types_3.png">
+                    <span>МАТОВЫЙ ХРОМ</span>
+                </div>
+                <div class="type">
+                    <img src="resources/img/types_4.png">
+                    <span>ХРОМ</span>
+                </div>
+                <div class="type">
+                    <img src="resources/img/types_5.png">
+                    <span>ХАМЕЛЕОН (МАТОВЫЙ И ГЛЯНЕЦ)</span>
+                </div>
+                <div class="type">
+                    <img src="resources/img/types_6.png">
+                    <span>ПЕРЛАМУТР И ГЛИТТЕР</span>
+                </div>
+                <div class="type">
+                    <img src="resources/img/types_7.png">
+                    <span>ВИНИЛОГРАФИЯ</span>
+                </div>
+            </div>
+        </div>
+        <div class="contacts dark-section">
+            <div>
+                <h1>Наш адрес и контакты</h1>
+                <span>У нас удобная и большая парковка</span>
+                <br>
+                <span>Мы ждем Вас с понедельника по субботу с 9:00 до 19:00</span>
+                <br>
+                <span>Адрес: г. Краснодар, ул. Российская, 313</span>
+                <br>
+                <span>Телефон: 8 (861) 216-79-17</span>
+            </div>
+            <img src="resources/img/map.png">
+        </div>
+        <div class="request dark-section">
+            <div>
+                <h1>Остались вопросы?</h1>
+                <span>Закажите обратный звонок и мы ответим на ваши вопросы!</span>    
+            </div>
+            <div class="form">
+                <input type="text">
+                <input type="tel">
+                <input type="checkbox">
+                <button>Оставить заявку</button>
+            </div>
+        </div>
+        <div class="footer dark-section">
+            <div class="topics">
+                <div class="topic">
+                    <img class="logo" src="resources/logo/logo.png">
+                    <span>АВТОМОБИЛИ-ТЮНИНГ-СЕРВИС.</span>
+                    <span>ПОЛНЫЙ ЦИКЛ ОБСЛУЖИВАНИЯ</span>
+                </div>
+                <div class="topic">
+                    <span>Услуги</span>
+                    <span>Весь список услуг</span>
+                </div>
+                <div class="topic">
+                    <span>Информация</span>
+                    <span>Контакты</span>
+                    <span>О компании</span>
+                    <span>Наши работы</span>
+                </div>
+                <div class="topic">
+                    <span>г. Краснодар, ул. Российская, 313</span>
+                    <span>Пн-пт: с 9.00 до 20.00</span>
+                    <span>Суб-вс: с 9.00 до 19.00</span>
+                    <span>Показать на карте</span>
+                </div>
+                <div class="topic">
+                    <span>8 (861) 206-79-17</span>
+                    <span>8 (861) 206-93-18</span>
+                    <div>
+                        <img src="resources/icon/icon-vk.png">
+                        <img src="resources/icon/icon-yt.png">
+                        <img src="resources/icon/icon-telegram.png">
+                    </div>
+                </div>
+            </div>
+            <div>
+                <span>©2023 Автосалон Pro Tuning</span>
+                <span>Политика обработки персональных данных</span>
             </div>
         </div>
     </body>
